alignment issue

--- a/src/app/mapped-vans/mapped-vans.component.css
+++ b/src/app/mapped-vans/mapped-vans.component.css
@@ -1,3 +1,8 @@
+
+.container-fluid {
+    padding: 24px !important;
+}
+
 .title {
     margin: 0px 0px 10px;
     padding: 15px 24px 15px;
